l'implementation du mapping - hibernate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,4 @@ spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-#security.jwt.secret-key=bXl2ZXJ5dmVyeXNlY3JldGtleXNlY3JldGtleWtleXNlY3JldA==
-#bezkoder.app.jwtExpirationMs=86400000
+spring.jpa.properties.hibernate.format_sql=true
