--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/e-recruit?createDatabaseIfNotE
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.servlet.multipart.enabled=true
@@ -11,3 +11,5 @@ spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 file.upload-image-dir=src/main/resources/static/image-uploads
 file.upload-pdf-dir=src/main/resources/static/pdf-uploads
+security.jwt.secret-key=bXl2ZXJ5dmVyeXNlY3JldGtleXNlY3JldGtleWtleXNlY3JldA==
+bezkoder.app.jwtExpirationMs=86400000
